# markdown-for-agents

./: .gitignore  .prettierignore  CLAUDE.md  CONTRIBUTING.md  README.md  eslint.config.ts  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.eslint.json  vitest.config.ts
.changeset/: bright-lilies-pay.md  config.json  fair-doors-fail.md  honest-schools-bet.md  open-ants-crash.md  polite-bottles-tap.md  remove-broken-edge-middleware-example.md  smooth-knives-relax.md  spicy-nails-hug.md  tired-cooks-pull.md  whole-pears-start.md
docs/: 404.md  SUMMARY.md  api.md  architecture.md  extraction.md  getting-started.md  index.md  (+2 more)
python/: README.md  pyproject.toml
python/src/markdown_for_agents/: __init__.py  _types.py
python/src/markdown_for_agents/core/: content_signal.py  converter.py  dedup.py  frontmatter.py  hash.py  parser.py  renderer.py  walker.py
python/src/markdown_for_agents/dom/: __init__.py  nodes.py
python/src/markdown_for_agents/extract/: __init__.py  extractor.py  selectors.py
python/src/markdown_for_agents/middleware/: _common.py  django.py  fastapi.py  flask.py
python/src/markdown_for_agents/rules/: __init__.py  block.py  inline.py  list_.py  table.py  util.py
python/src/markdown_for_agents/tokens/: __init__.py
python/tests/: conftest.py  fixtures  test_content_signal.py  test_converter.py  test_dedup.py  test_extract.py  test_frontmatter.py  test_renderer.py  test_tokens.py  test_walker.py
python/tests/integration/: test_fixtures.py  test_parity.py
python/tests/rules/: test_block.py  test_inline.py  test_list.py  test_table.py
(+52 files in other folders)
