[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markdown-for-agents"
version = "0.1.0"
description = "Runtime-agnostic HTML-to-Markdown converter built for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["markdown", "html", "ai", "agents", "llm", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.115.0", "starlette>=0.40.0"]
flask = ["flask>=3.1.0"]
django = ["django>=5.1"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "mypy>=1.14.0",
    "ruff>=0.9.0",
    "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/markdown_for_agents"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.12"
exclude = ["src/markdown_for_agents/middleware/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
